--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,144 @@
-.App {
-  text-align: center;
+*{
+  margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav-atributos {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #ff4d2d; /* Color típico de Temu */
+  padding: 30px 50px;
+  height: 100px;
+  
+
+}
+
+.centrar-texto{
+  display: flex;
+  justify-content: center;  /* Centrar horizontalmente */
+  align-items: center;      /* Centrar verticalmente */
+  height: 100px;            /* Establece una altura para ver el efecto */
+
+}
+.estilo-footer{
+  margin-top: 10px; /* Ajusta el valor según sea necesario */
+  padding: 100px;
+  text-align: center;
+  background-color: #ff4d2d;
+}
+
+
+.contenedor{
+  max-width: 1280px;
+  padding: 0 1rem;
+}
+
+.button{
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
   color: white;
+  text-decoration: none;
+  padding: 0.5rem;
+  border: none;
+  background: none;
+  cursor: pointer;
+  font-size: 0.875rem;
 }
 
-.App-link {
-  color: #61dafb;
+.button:hover{
+  color:yellow;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.formato-imagen{
+  height: 60px;
+}
+
+.formato-cajita-imagen{
+  margin-left: -15px;
+}
+
+
+
+
+
+footer {
+  background-color:#ff5636;
+  color: #fff;
+  padding: 40px 0;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 0 40px;
+}
+
+.footer-left {
+  flex: 1;
+  font-size: 18px;
+  font-style: italic;
+  color: #ccc;
+}
+
+.footer-center {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+
+.footer-center ul {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-center ul li {
+  display: inline-block;
+}
+
+.footer-center ul li a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 16px;
+  transition: color 0.3s ease;
+}
+
+.footer-center ul li a:hover {
+  color: #ff5636;
+}
+
+.footer-right {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.footer-right a {
+  color: #fff;
+  font-size: 24px;
+  margin-left: 15px;
+  transition: color 0.3s ease;
+}
+
+.footer-right a:hover {
+  color: #ff5636;
+}
+
+.footer-bottom {
+  text-align: center;
+  padding: 20px 0;
+  background-color: #ff5636;
+  font-size: 14px;
+  margin-top: 50px; /* Espacio extra entre el footer principal y la parte inferior */
+}
+
+.footer-bottom p {
+  margin: 0;
+  color: #ccc;
 }
