--- a/src/hoja-de-estilos/Barra-de-busqueda.css
+++ b/src/hoja-de-estilos/Barra-de-busqueda.css
@@ -21,6 +21,7 @@
 .search-bar-input:focus {
   border-color: #ff7f50;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
 }
 
 /* Estilo del botón de búsqueda */
@@ -38,4 +39,64 @@
 
 .search-bar-button:hover {
   background-color: #e96d3c;
+}
+
+
+.search-bar {
+  width: 100%;
+  max-width: 400px;
+  padding: 10px 15px;
+  border-radius: 30px;
+  border: 1px solid #ddd;
+  outline: none;
+  transition: all 0.3s ease;
+  font-size: 16px;
+  background-color: #f9f9f9;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+
+.search-bar::placeholder {
+  color: #888;
+  font-style: italic;
+}
+
+
+.cantidad-selector {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.btn-cantidad {
+  background-color: #ccc;
+  border: none;
+  padding: 5px 10px;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.btn-cantidad:hover {
+  background-color: #aaa;
+}
+
+.cantidad-input {
+  width: 50px;
+  text-align: center;
+  border: 1px solid #ccc;
+  margin: 0 5px;
+  padding: 5px;
+}
+
+.btn-agregar-carrito {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.icono-carrito {
+  width: 24px;
+  height: 24px;
 }
